--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 body {
     font-family: 'Manrope', sans-serif;
@@ -24,8 +25,8 @@ header,footer {
    
 }
 header {
-    font-family: "Abril Fatface script=latin rev=1";
-    font-weight: 400;
+    font-family: 'Dancing Script', cursive;
+    font-weight: 100;
     font-style: normal;
     padding: 8px 24px;
     position: relative;
@@ -36,7 +37,9 @@ header {
      line-height: 8px;
  }   
 h1 {
-    font-size: 32px;
+    font-size: 45px;
     line-height: 18px;
 }
-
+#update-time { 
+    color: rgb(156, 113, 5);
+}
