--- a/lesson2/wk2-css.css/small.css
+++ b/lesson2/wk2-css.css/small.css
@@ -33,6 +33,7 @@ main {
     font-size: 1rem;
     background-color: rgb(178, 201, 216);
     font-family: 'Raleway', sans-serif;
+    text-align: center;
    
 
 
@@ -65,6 +66,7 @@ main section {
     background-color: rgb(92, 91, 91);
     border-radius: 10px;
     align-items: center;
+    
 
 }
 
