--- a/lesson2/wk2-css.css/medium.css
+++ b/lesson2/wk2-css.css/medium.css
@@ -1,2 +1,10 @@
+/* tablet views***********/
+@media only screen and (min-width: 37.5em) {
+    main {
+        grid-template-columns: auto auto;
+    }
 
-
+    #third-sec {
+        grid-column: span 2;
+    }
+}
