--- a/lesson3 /wk-3.css/small.css
+++ b/lesson3 /wk-3.css/small.css
@@ -67,7 +67,7 @@ nav ul li a {
 }
 
 nav a:hover {
-    background-color: #FFF275;
+    background-color: #FFDF6E;
     color: #000000;
 }
 
@@ -77,6 +77,10 @@ img {
 }
 
 /* specific to Typography page*/
+.logobox{
+    background-color:#B8D3E9 ;
+    padding: 1.8rem;
+}
 #sample1 {
     background-color: #0D3B66;
     color: #FFFFFF;
@@ -111,8 +115,8 @@ th {
 }
 
 /*specific to Color Scheme Page*/
-#corn {
-    background-color: #FFF275;
+#yellow {
+    background-color: #FFDF6E;
 }
 
 #ltblue {
