added logo need to float left still

--- a/lesson4/css/smallwk4.css
+++ b/lesson4/css/smallwk4.css
@@ -2,7 +2,9 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #B8D3E9;
 }
-
+#logo{
+    float: left;?????
+}
 header,
 footer {
     background-color: #0D3B66;
@@ -17,6 +19,8 @@ footer {
 footer a {
     color: #FFFFFF;
 }
+
+
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
