--- a/lesson4/css/smallwk4.css
+++ b/lesson4/css/smallwk4.css
@@ -2,9 +2,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #B8D3E9;
 }
-#logo{
-    float: left;?????
-}
+
+
 header,
 footer {
     background-color: #0D3B66;
@@ -12,10 +11,17 @@ footer {
     padding: 10px;
     display: flex;
     align-items: center;
-    flex-flow: column;
     justify-content:center;
     
 }
+img{
+    padding-right: 16px;
+}
+.headings{
+    display: flex;
+    flex-direction: column;
+    }
+
 footer a {
     color: #FFFFFF;
 }
@@ -25,6 +31,7 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size: 3rem;
+    margin: auto;
 }
 
 nav{
@@ -70,7 +77,7 @@ main{
     display: flex;
     align-items: center;
     flex-flow: column;
-    justify-content:center;
+    justify-content:flex-start;
 
 }
 .contentbox{
