--- a/lesson4/css/smallwk4.css
+++ b/lesson4/css/smallwk4.css
@@ -1,11 +1,12 @@
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #B8D3E9;
+   
 }
 
 
-header,
-footer {
+header
+ {
+    
     background-color: #0D3B66;
     color: #FFFFFF;
     padding: 10px;
@@ -13,6 +14,14 @@ footer {
     align-items: center;
     justify-content:center;
     
+}
+footer{
+    
+    background-color: #0D3B66;
+    color: #FFFFFF;
+    padding: 10px;
+    align-items: center;
+    justify-content:center;
 }
 img{
     padding-right: 16px;
@@ -34,9 +43,13 @@ h1 {
     margin: auto;
 }
 
+h2{
+    text-align: center;
+}
+
 nav{
     margin: 0 auto;
-    max-width: 760px;
+    
     background-color:#FFDF6E;
     font-family: 'Open Sans', sans-serif;
     
@@ -49,6 +62,13 @@ nav{
 .navigation li:first-child{
     display: block;
 
+}
+.navigation li{
+    display: none;
+}
+
+.responsive li{
+    display: block;
 }
 nav ul {
     list-style-type: none;
@@ -71,24 +91,18 @@ nav ul li.active a{
     background-color: rgba(0,0,0,0.2);
    
 }
-
-main{
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-    justify-content:flex-start;
-
+.weatherSum{
+    background-color: #B8D3E9;
+    
+    padding: .8rem;
+    margin: 2rem;
 }
+
 .contentbox{
     border: 1px dashed black;
     padding: .8rem;
     margin: 8px;
+    background-color: #FFFFFF;
    
-}
-.clearfix:after {
-    content:"";
-    clear: both;
-    display: table;
 }
 
