--- a/lesson5/wk5-css/small.css
+++ b/lesson5/wk5-css/small.css
@@ -3,7 +3,9 @@ body {
    
 }
 
-
+img{
+    padding-right: 16px;
+}
 header
  {
     background-color: #0D3B66;
@@ -13,17 +15,6 @@ header
     align-items: center;
     justify-content:center;
     
-}
-main{
-    max-width: 100%;
-    display: block;
-    padding: 8px;
-    margin: 8px auto;
-   
-}
-
-img{
-    padding-right: 16px;
 }
 .headings{
     display: flex;
@@ -36,12 +27,22 @@ h1 {
     font-size: 3rem;
     margin: auto;
 }
+h3{
 
+}
 h2{
     text-align: center;
     font-weight: 500;
+    margin: auto;
+    padding: 1rem;
 }
-
+h4{
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    margin: auto;
+}
 nav{
     margin: 0 auto;
     background-color:#FFDF6E;
@@ -77,27 +78,60 @@ nav ul li a{
     color: #000;
    
 }
+nav ul li.active a{
+    background-color:#B8D3E9;
+    
+}
 nav a:hover {
     background-color: rgba(0,0,0,0.2);
 }
 
-nav ul li.active a{
-    background-color: rgba(0,0,0,0.2);
-   
+
+main{
+    max-width: 100%;
+    display: block;
+    padding: 8px;
+    margin: 8px auto;
+   }
+.section1{
+    margin: 10px auto;
+	position: relative;
 }
 .weatherSum{
-    background-color: #B8D3E9;
+    background-color: #0D3B66;
+    border: 2px solid  #FFFFFF;
+    position:absolute;
+    top: 40px;
+    left: 50px;
+    opacity: .85;
+    box-shadow: 0 0 30px rgb(5, 5, 5);
     
-    padding: .8rem;
-    margin: 2rem;
+    margin: 10px;
 }
-
-.contentbox{
-    border: 1px dashed black;
-    padding: .8rem;
-    margin: 8px;
+#heroimg{
+    max-width: 100%;
+    width: 960px;
+    height: 350px;
+    padding: 0;
+}
+#boxtitle{
     background-color: #FFFFFF;
-   
+    padding: 1rem;
+    
+}
+.contentbox{
+    
+    padding: .2rem;
+    margin: 8px;
+    background-color:#0D3B66;
+   color: #FFFFFF;
+}
+.section3{
+    background-color:  #B8D3E9;
+    padding: 16px;
+}
+#articleimg{
+    max-width: 90%;
 }
 footer{
     display: block;
