--- a/lesson5/wk5-css/medium.css
+++ b/lesson5/wk5-css/medium.css
@@ -13,4 +13,15 @@ flex: 1 1 100%;
   main{
     text-align: center;
   }
+  #articleimg{
+    width: 530px;
+  }
+  .section2{
+   display: block;
+  }
 }
+ /* table,
+th,
+td {
+    border: 1px solid black;
+}*/
