--- a/lesson5/wk5-css/small.css
+++ b/lesson5/wk5-css/small.css
@@ -2,7 +2,14 @@ body {
     font-family: 'Open Sans', sans-serif;
    
 }
+#pancake{
+    background-color: #FFDF6E;
+    padding: 1.5rem;
+    text-align: center;
+    font-style: italic;
+    display: none;
 
+}
 img{
     padding-right: 16px;
 }
@@ -95,9 +102,14 @@ main{
    }
 .section1{
     margin: 10px auto;
-	position: relative;
+    position: relative;
+    /* put img in background */
+   /* background-image: url('../../lesson4/images/giulia-bertelli-9jJP1myzd6s-unsplash-edit.jpg');
+    background-size: contain;
+    height: 100px;*/
 }
 .weatherSum{
+    
     background-color: #0D3B66;
     border: 2px solid  #FFFFFF;
     position:absolute;
@@ -105,33 +117,117 @@ main{
     left: 50px;
     opacity: .85;
     box-shadow: 0 0 30px rgb(5, 5, 5);
-    
-    margin: 10px;
+     margin: 10px;
 }
 #heroimg{
-    max-width: 100%;
+    width: 100%;
+   /*  this is from the tutorial max-width: 100%;
     width: 960px;
-    height: 350px;
+    height: 350px;*/
     padding: 0;
 }
 #boxtitle{
     background-color: #FFFFFF;
-    padding: 1rem;
-    
+    padding: 1rem 3rem 1rem;   
 }
 .contentbox{
-    
-    padding: .2rem;
+   padding: .4rem;
     margin: 8px;
     background-color:#0D3B66;
    color: #FFFFFF;
 }
+.section2{
+   margin: 24px;
+   display: none;
+   
+  
+}
+/*.forcast{
+    border: 1px solid #000;
+    background-color: #FFFFFF;
+    margin: 0px auto;
+}
+
+
+.forcast tr th {
+    border: 1px solid #000;
+   
+}
+.forcast tr td{
+    border: 1px solid #000;
+    background-color: #B8D3E9;  
+}*/
+
+/*this is code for forcast as a grid*/
+.forcast{
+    width: 70%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    margin: 0 auto; 
+    border: 2px solid rgb(5, 5, 5);
+}
+.forcast p{
+   padding: 8px;
+    margin:0px;
+    background-color:#B8D3E9;
+}
+.forcast img{
+    width: 90%;
+}
+.pic{
+    border: 1px solid rgb(5, 5, 5);
+    width: 100%;
+    padding: 0px;
+    margin: 0px auto;
+    background-color: #FFFFFF;
+}
+/* this is the article*/
 .section3{
     background-color:  #B8D3E9;
     padding: 16px;
 }
 #articleimg{
+    float: right;
     max-width: 90%;
+    margin-right: 15px;
+    
+  
+  border-radius: 5px;
+  padding: 1em;
+    
+}
+/* this is the Contact info*/
+.section4{
+    display: flex;
+    margin: 16px;
+    text-align: left;
+
+}
+.section4 h2{
+padding: 0px;
+text-align: left;
+}
+.contact{
+ display: flex; 
+ flex-direction: column;
+ text-align: left;
+ margin-left: 60px;
+ }
+#map{
+width: 40%;
+margin: 24px;
+padding: 16px;
+box-shadow: 0 0 30px rgb(5, 5, 5);
+
+}
+
+.socialmedia{
+    display: flex;
+    width: 40px;
+}
+.socialmedia img{
+    max-width: 100%;
 }
 footer{
     display: block;
