--- a/lesson5/wk5-css/small.css
+++ b/lesson5/wk5-css/small.css
@@ -34,9 +34,7 @@ h1 {
     font-size: 3rem;
     margin: auto;
 }
-h3{
 
-}
 h2{
     text-align: center;
     font-weight: 500;
@@ -140,6 +138,7 @@ main{
    margin: 24px;
    display: none;
    
+   
   
 }
 /*.forcast{
@@ -156,32 +155,44 @@ main{
 .forcast tr td{
     border: 1px solid #000;
     background-color: #B8D3E9;  
-}*/
+}
+*/
+/*this is code for forcast as a flex*/
 
-/*this is code for forcast as a grid*/
-.forcast{
+.forecast{
+    display: flex;
+    flex-direction: row;
     width: 70%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    margin: 0 auto; 
-    border: 2px solid rgb(5, 5, 5);
-}
-.forcast p{
-   padding: 8px;
-    margin:0px;
-    background-color:#B8D3E9;
-}
-.forcast img{
-    width: 90%;
-}
-.pic{
-    border: 1px solid rgb(5, 5, 5);
-    width: 100%;
-    padding: 0px;
+    border-right: 1px solid #333;
     margin: 0px auto;
-    background-color: #FFFFFF;
+    
 }
+.flex-col{
+    flex: 1 1 auto;
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #333;
+	border-left: 1px solid #333;
+	text-align: center;
+}
+ .day{
+    display: block; 
+    background-color:#B8D3E9;
+    padding: 5px;
+    border-bottom: 1px solid #333;
+    border-top: 1px solid #333;
+    text-align: center;
+ }
+.forecast img{
+    padding-top:16px;
+    width: 50%;
+    border-radius: 100px;
+}
+.temp{
+    display: block;
+    padding: 0 5px 5px;
+
+}
+
 /* this is the article*/
 .section3{
     background-color:  #B8D3E9;
@@ -200,19 +211,16 @@ main{
 /* this is the Contact info*/
 .section4{
     display: flex;
+    flex-direction: row;
     margin: 16px;
-    text-align: left;
+}
 
-}
-.section4 h2{
-padding: 0px;
-text-align: left;
-}
 .contact{
  display: flex; 
  flex-direction: column;
- text-align: left;
- margin-left: 60px;
+ 
+ margin-left: 50px;
+ margin-right: 20px;
  }
 #map{
 width: 40%;
@@ -224,6 +232,7 @@ box-shadow: 0 0 30px rgb(5, 5, 5);
 
 .socialmedia{
     display: flex;
+    flex-direction: row;
     width: 40px;
 }
 .socialmedia img{
