--- a/lesson5/wk5-css/small.css
+++ b/lesson5/wk5-css/small.css
@@ -101,21 +101,25 @@ main{
 .section1{
     margin: 10px auto;
     position: relative;
+    
+    
     /* put img in background */
    /* background-image: url('../../lesson4/images/giulia-bertelli-9jJP1myzd6s-unsplash-edit.jpg');
     background-size: contain;
     height: 100px;*/
 }
 .weatherSum{
-    
+    font-size: 14px;
+    line-height: 0.5rem;
     background-color: #0D3B66;
     border: 2px solid  #FFFFFF;
     position:absolute;
-    top: 40px;
-    left: 50px;
+    top: 15px;
+    left: 110px;
     opacity: .85;
     box-shadow: 0 0 30px rgb(5, 5, 5);
      margin: 10px;
+     
 }
 #heroimg{
     width: 100%;
@@ -216,28 +220,22 @@ main{
 }
 
 .contact{
- display: flex; 
- flex-direction: column;
- 
- margin-left: 50px;
- margin-right: 20px;
- }
+    grid-column: 1/3;
+    margin:  10px auto;
+   }
 #map{
-width: 40%;
-margin: 24px;
-padding: 16px;
-box-shadow: 0 0 30px rgb(5, 5, 5);
+display: none;
 
 }
+h3{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 2rem;
+}
+.socialmedia {
+    width: 40px; }
+  
 
-.socialmedia{
-    display: flex;
-    flex-direction: row;
-    width: 40px;
-}
-.socialmedia img{
-    max-width: 100%;
-}
 footer{
     display: block;
     padding: 8px;
@@ -248,6 +246,7 @@ footer{
     color: #FFFFFF;
     
    }
+  
    footer a {
     color: #FFFFFF;
 }
