--- a/css/small.css
+++ b/css/small.css
@@ -1,6 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+*/
 body {
     font-family: 'Manrope', sans-serif;
     font-size: 18px;
