attempt to fix blur

--- a/lesson7/wk7.css/lazyload.css
+++ b/lesson7/wk7.css/lazyload.css
@@ -8,7 +8,7 @@ text-align: center;
      justify-content: center;
 }
 
-  /*picture img[data-src] {
+  picture img[data-src] {
         filter: blur(0.2em);
       }
       
@@ -16,4 +16,4 @@ text-align: center;
         filter: blur(0em);
         transition: filter 0.5s;
       }
-    */
+    
