blur fix add nav to gallery

--- a/lesson7/wk7.css/lazyload.css
+++ b/lesson7/wk7.css/lazyload.css
@@ -8,11 +8,11 @@ text-align: center;
      justify-content: center;
 }
 
-  picture img[data-src] {
+   img[data-src] {
         filter: blur(0.2em);
       }
       
- picture img{
+  img{
         filter: blur(0em);
         transition: filter 0.5s;
       }
