--- a/lesson7/wk7.css/medium.css
+++ b/lesson7/wk7.css/medium.css
@@ -4,4 +4,14 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 0px;
     }
+    .navigation {
+        display: flex;
+      }
+      .navigation li:first-child {
+        display: none;
+      }
+      .navigation li {
+        display: block;
+        flex: 1 1 100%;
+      }
 }
