--- a/lesson7/wk7.css/small.css
+++ b/lesson7/wk7.css/small.css
@@ -1,15 +1,88 @@
-header{
-    padding: 2rem;
-    text-align: center;
-    background-color: #0D3B66;
-}
-h1{
-   color: white;
-    }
 body{
     background-color:#B8D3E9;
     margin: 1rem;
 }
+
+header
+{
+    background-color: #0D3B66;
+    color: #FFFFFF;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    
+}
+.headings{
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 3rem;
+    margin: auto;
+}
+
+h2{
+    text-align: center;
+    font-weight: 500;
+    margin: auto;
+    padding: 1rem;
+}
+h4{
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    margin: auto;
+}
+nav{
+    margin: 0 auto;
+    background-color:#FFDF6E;
+    font-family: 'Open Sans', sans-serif;
+    
+}
+.navigation{
+    list-style: none;
+    text-align: center;
+    padding: 0;
+}
+.navigation li:first-child{
+    display: block;
+    
+}
+.navigation li{
+    display: none;
+}
+
+.responsive li{
+    display: block;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+nav ul li a{
+    display: block;
+    padding: .8rem 2%;
+    text-decoration: none;
+    color: #000;
+    
+}
+nav ul li.active a{
+    background-color:#B8D3E9;
+    
+}
+nav a:hover {
+    background-color: rgba(0,0,0,0.2);
+}
+
+
+
 main{
     margin: 0px auto;
 }
