--- a/lesson7/wk7.css/small.css
+++ b/lesson7/wk7.css/small.css
@@ -1,4 +1,5 @@
 body{
+   font-family: 'Open Sans', sans-serif;
     background-color:#B8D3E9;
     margin: 1rem;
 }
@@ -12,6 +13,9 @@ header
     align-items: center;
     justify-content:center;
     
+}
+picture {
+    padding-right: 16px;
 }
 .headings{
     display: flex;
@@ -80,7 +84,14 @@ nav ul li.active a{
 nav a:hover {
     background-color: rgba(0,0,0,0.2);
 }
-
+img[data-src] {
+    filter: blur(0.2em);
+  }
+  
+img{
+    filter: blur(0em);
+    transition: filter 0.5s;
+  }
 
 
 main{
