--- a/lesson7/wk7.css/small.css
+++ b/lesson7/wk7.css/small.css
@@ -125,7 +125,18 @@ figcaption{
      max-width: 1050px;
      margin: 1rem auto;
 }
+ 
 footer{
-    padding: 2rem;
+    display: block;
+    padding: 8px;
+    margin: 8px auto;
+    text-align: center;
+    max-width: 100%;
     background-color: #0D3B66;
+    color: #FFFFFF;
+    
+}
+
+footer a {
+    color: #FFFFFF;
 }
