--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap');*/
 
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -54,7 +54,7 @@ td {
 }
 
 th {
-  font-weight: bold 700;
+  font-weight: bold;
   font-size: 1.75rem;
 }
 
