--- a/lesson8/wk8css/small.css
+++ b/lesson8/wk8css/small.css
@@ -1,23 +1,23 @@
-body{
-   font-family: 'Open Sans', sans-serif;
-    background-color:#B8D3E9;
+body {
+    font-family: 'Open Sans', sans-serif;
+    background-color: #B8D3E9;
     margin: 1rem;
 }
-/* header picture title and logo start here*/
-header
-{
+
+header {
     background-color: #0D3B66;
     color: #FFFFFF;
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content:center;
-    
+    justify-content: center;
 }
+
 picture {
     padding-right: 16px;
 }
-.headings{
+
+.headings {
     display: flex;
     flex-direction: column;
 }
@@ -29,100 +29,78 @@ h1 {
     margin: auto;
 }
 
-h2{
+h2 {
     text-align: center;
     font-weight: 500;
     margin: auto;
     padding: 1rem;
 }
-h4{
+
+h4 {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
     font-weight: 200;
     font-style: italic;
     margin: auto;
 }
-/* Navigation starts here*/
-nav{
+
+nav {
     margin: 0 auto;
-    background-color:#FFDF6E;
+    background-color: #FFDF6E;
     font-family: 'Open Sans', sans-serif;
-    
 }
-.navigation{
+
+.navigation {
     list-style: none;
     text-align: center;
     padding: 0;
 }
-.navigation li:first-child{
+
+.navigation li:first-child {
     display: block;
-    
 }
-.navigation li{
+
+.navigation li {
     display: none;
 }
 
-.responsive li{
+.responsive li {
     display: block;
 }
+
 nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     align-items: center;
 }
-nav ul li a{
+
+nav ul li a {
     display: block;
     padding: .8rem 2%;
     text-decoration: none;
     color: #000;
-    
+
 }
-nav ul li.active a{
-    background-color:#B8D3E9;
-    
+
+nav ul li.active a {
+    background-color: #B8D3E9;
 }
+
 nav a:hover {
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0, 0, 0, 0.2);
 }
-/*gallery place holder and picture blur start here*/
-img[data-src] {
-    filter: blur(0.2em);
-  }
-  
-img{
-    filter: blur(0em);
-    transition: filter 0.5s;
-    width: 100%;
-    height: auto;
-    margin: 0;
-  }
-main{
-    margin: 0px auto;
-}
-figure{
-    background-color: white;
-   border: .5rem solid white;
-    align-content: center;
-    box-shadow: -10px 5px 5px gray;
-
-
-}
-figcaption{
-    display: none;
+/*this is for the Thank you page*/
+main h1, main p {
+    padding: 1rem;
     text-align: center;
 }
 
-.grid{
-    display: grid;
-    grid-gap: 0px;
-    grid-auto-columns: auto;
-     justify-content: center;
-     max-width: 1050px;
-     margin: 1rem auto;
-}
- /* footer style starts here*/
-footer{
+
+
+
+
+footer {
     display: block;
     padding: 8px;
     margin: 8px auto;
@@ -130,7 +108,7 @@ footer{
     max-width: 100%;
     background-color: #0D3B66;
     color: #FFFFFF;
-    
+
 }
 
 footer a {
