--- a/lesson8/wk8css/small.css
+++ b/lesson8/wk8css/small.css
@@ -91,32 +91,36 @@ nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 /*input form starts here*/
-fieldset {
+ form fieldset {
     margin: 2rem 0;
-	background-color: #eee;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    border: 5px solid #FFFFFF;
-    padding: .5rem 2%;
+    border: 4px solid #FFFFFF;
+    border-radius: 10px;
+   padding: .5rem 2%;
+    max-width: 25rem;
 }
 
 form legend{
     color: #000;
-    font-size: 1.5rem;
     margin: 0 1rem;
     padding: 0 .5rem;
+    font-size: 1.5rem;
+    
+    
     border: 5px solid #FFFFFF;
     background-color: #FFFFFF;
     text-align: center;
     margin: 0 auto;
-    margin-top: 2rem;
+    margin-top: 2rem 0;
 }
+
+
 form label.top, form div {
     display: block;
     padding-top: 1rem;
+    color: #0D3B66;
     font-size: .8rem;
 }
-form label.top input{
+/*form label.top input{
     display: block;
     font-size: 1rem;
     border: solid 2px #0D3B66;
@@ -125,8 +129,24 @@ form label.top input{
     width: 100%;
     max-width: 20rem;
 }
-
-form input.submitBtn{
+*/
+form label.top input, form label.top select {
+    
+        display: block;
+        font-size: 1rem;
+        padding: .75rem;
+        border-radius: 4px;
+        border: 1px solid;
+        width: 100%;
+        max-width: 20rem;
+        background-color: rgba(0, 0, 0, 0.1);
+}
+form label.radio {
+    display: block;
+    padding: .75 rem 0;
+    color: #000;
+}
+form input.submitBtn {
     border: none;
     background-color: #FFDF6E;
     color: #000;
@@ -137,9 +157,13 @@ form input.submitBtn{
     width: 96%;
     max-width: 20rem;
 }
-form input.top input:required{
+
+form label.top input:required {
     border-left: red solid 6px;
-    
+    }
+
+form label.top input:required:valid {
+    border-left: green solid 6px; 
 }
 /*this is for the Thank you page*/
 main h1, main p {
