--- a/lesson8/wk8css/small.css
+++ b/lesson8/wk8css/small.css
@@ -102,18 +102,19 @@ nav a:hover {
 
 form legend{
     color: #000;
-    margin: 0 1rem;
-    padding: 0 .5rem;
+ padding: 0 .5rem;
     font-size: 1.5rem;
-    
-    
-    border: 5px solid #FFFFFF;
+ border: 5px solid #FFFFFF;
     background-color: #FFFFFF;
     text-align: center;
-    margin: 0 auto;
-    margin-top: 2rem 0;
+     margin-top: 2rem 0;
 }
-
+.radioButton{
+    
+    padding: 1rem;
+    margin: 1.5rem 0;
+    padding-top: 0px;
+}
 
 form label.top, form div {
     display: block;
@@ -151,12 +152,14 @@ form input.submitBtn {
     border: none;
     background-color: #FFDF6E;
     color: #000;
-    border-radius: .5rem;
+    border-radius: 4px;
     border: 2px solid #cccccc;
     padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
-    width: 96%;
+    width: 100%;
     max-width: 20rem;
+   
+    
+    
     box-shadow: 1px 1px 1px;
 }
 textarea {
