--- a/lesson8/wk8css/small.css
+++ b/lesson8/wk8css/small.css
@@ -90,77 +90,95 @@ nav ul li.active a {
 nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
+
 /*input form starts here*/
 
- form fieldset {
+form fieldset {
     margin: 0 auto;
     border: 4px solid #FFFFFF;
     border-radius: 10px;
-   padding: .5rem 2%;
-    max-width: 25rem;
+    padding: .5rem 2%;
+   
 }
 
-form legend{
+form legend {
     color: #000;
- padding: 0 .5rem;
+    padding: 0 .5rem;
     font-size: 1.5rem;
- border: 5px solid #FFFFFF;
+    border: 5px solid #FFFFFF;
     background-color: #FFFFFF;
     text-align: center;
-     margin-top: 2rem 0;
+    margin-top: 2rem;
 }
 
 
-form label.top, form div {
+form label.top,
+form div {
     display: block;
     padding-top: 1rem;
     color: #0D3B66;
     font-size: .8rem;
 }
 
-form label.top input, form label.top select {
-    
-        display: block;
-        font-size: 1rem;
-        padding: .75rem;
-        border-radius: 4px;
-        border: 1px solid;
-        width: 100%;
-        max-width: 20rem;
-        background-color: rgba(0, 0, 0, 0.1);
-}
-form label.sbs {
+.top input,
+.top select {
+
     display: block;
-    padding: .75 rem 0;
+    font-size: 1rem;
+    padding: .75rem;
+    border-radius: 4px;
+    border: 1px solid;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.sbs  {
+    display: block;
+    padding: .50rem 0;
     
 }
-form input.submitBtn {
-    border: none;
+#ratingvalue{
+    padding: 1rem 0px;
+    font-size: 1.25rem;
+}
+
+.flexly {
+   
+    display: flex;
+    flex-direction: column;
+    max-width: 20rem;
+    color: #0D3B66;
+    font-size: .8rem;
+}
+input.submitBtn {
+    margin: 1rem 0 1rem 1rem;
     background-color: #FFDF6E;
     color: #000;
-    border-radius: 4px;
+    border-radius: 6px;
     border: 2px solid #cccccc;
     padding: .75rem 1.5rem;
     width: 100%;
     max-width: 20rem;
-   
-    
-    
     box-shadow: 1px 1px 1px;
 }
+
 textarea {
-    box-shadow: 1px 1px 1px ;
+    box-shadow: 1px 1px 1px;
     width: 96%;
 }
-form label.top input:required {
-    border-left: red solid 6px;
-    }
 
-form label.top input:required:valid {
-    border-left: green solid 6px; 
+ .top input:required {
+    border-left: red solid 6px;
 }
+
+.top input:required:valid {
+    border-left: green solid 6px;
+}
+
 /*this is for the Thank you page*/
-main h1, main p {
+main h1,
+main p {
     padding: 1rem;
     text-align: center;
 }
