linked nav to page debugged

--- a/lesson8/wk8css/small.css
+++ b/lesson8/wk8css/small.css
@@ -43,7 +43,7 @@ h4 {
     font-style: italic;
     margin: auto;
 }
-
+/* every pages nav starts here*/
 nav {
     margin: 0 auto;
     background-color: #FFDF6E;
