--- a/lesson9/wk-9.css/prophets.css
+++ b/lesson9/wk-9.css/prophets.css
@@ -8,7 +8,7 @@ header{
 .cards{
     display: grid;
     grid-gap: 2px;
-    grid-auto-columns: auto;
+    grid-auto-columns: repeat(1, 1fr);
      justify-content: center;
      max-width: 1050px;
      margin: 1rem auto;
