--- a/lesson9/wk-9.css/large.css
+++ b/lesson9/wk-9.css/large.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 65rem){
     nav ul li a{padding: .6rem 1rem;} 
+   /*this is for the form*/
     form label.sbs{
         padding: .4rem 0;
     }
