--- a/lesson9/wk-9.css/small.css
+++ b/lesson9/wk-9.css/small.css
@@ -97,7 +97,37 @@ nav ul li.active a {
 nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
-
+/*town cards start here for weather home page*/
+.town{
+    display: grid;
+     grid-gap: 0px;
+    grid-auto-columns: auto;
+     justify-content: center;
+     max-width: 70%;
+     margin: 2rem auto;
+     background-color: #FFFFFF;
+     border-radius: 2rem;
+   /* medium query grid-template-columns: repeat(3, 1fr);*/
+}
+div.picture{
+    width: 100%;
+    margin: 0 auto;
+}
+div.picture img{
+    width: 100%;
+    border-radius: 25px 25px 0px 0px;
+   
+}
+div.info{
+    margin: 2rem;
+}
+div.info p {
+    padding: 0px;
+    margin: .5rem;
+}
+div.info h4{
+    margin: 1.5rem;
+}
 /*input form starts here*/
 
 form fieldset {
