attempt to change the large back to columns

--- a/lesson9/wk-9.css/large.css
+++ b/lesson9/wk-9.css/large.css
@@ -10,4 +10,7 @@
     input.submitBtn {
         margin-left: 12rem;
     }
+    .towns{
+        grid-template-columns: repeat(3,1fr);
+    }
     }
