--- a/lesson9/wk-9.css/large.css
+++ b/lesson9/wk-9.css/large.css
@@ -10,7 +10,27 @@
     input.submitBtn {
         margin-left: 12rem;
     }
-    .towns{
-        grid-template-columns: repeat(3,1fr);
+    #towns{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 1rem;
     }
+.town{
+    display:flex;
+    flex-direction: column;
+    margin: 1rem;
+    max-width: auto;
+    max-height: auto;
+   
+}
+.picture{
+   
+}
+  div.picture img{
+        height: auto;
+        width: 10rem;
+        height: 10rem;
+        
+    
+      }  
     }
