--- a/lesson9/wk-9.css/medium.css
+++ b/lesson9/wk-9.css/medium.css
@@ -25,8 +25,13 @@
         grid-column: 2;
         
       }
+
       section:nth-child(odd) .info {
         grid-column: 1;
         grid-row: 1;
+      }
+      #weatherArticle {
+        float: left;
+        margin: 1rem;
       }
 }
