--- a/lesson9/wk-9.css/large.css
+++ b/lesson9/wk-9.css/large.css
@@ -1,36 +1,45 @@
-@media only screen and (min-width: 65rem){
-    nav ul li a{padding: .6rem 1rem;} 
-   /*this is for the form*/
-    form label.sbs{
+@media only screen and (min-width: 65rem) {
+    nav ul li a {
+        padding: .6rem 1rem;
+    }
+
+    /*this is for the form*/
+    form label.sbs {
         padding: .4rem 0;
     }
-    form fieldset{
+
+    form fieldset {
         max-width: 900px;
     }
+
     input.submitBtn {
         margin-left: 12rem;
     }
-    #towns{
+
+    #towns {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         margin: 1rem;
     }
-.town{
-    display:flex;
-    flex-direction: column;
-    margin: 1rem;
-    
-    
-   
-}
-#weatherArticle {
-    display: none;
-}
-  div.picture img{
-        
+
+    .town {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+
+
+
+    }
+
+    #weatherArticle {
+        display: none;
+    }
+
+    div.picture img {
+
         width: 10rem;
         height: 10rem;
-        
-    
-      }  
+
+
     }
+}
