--- a/lesson9/wk-9.css/medium.css
+++ b/lesson9/wk-9.css/medium.css
@@ -1,37 +1,44 @@
-@media only screen and (min-width: 36rem){
-    
-    .navigation {
-        display: flex;
-      }
-      .navigation li:first-child {
-        display: none;
-      }
-      .navigation li {
-        display: block;
-        flex: 1 1 100%;
-      }
-      form legend{
-        text-align: center;
-      }/* json side by side format starts here*/
-      .town{
-        grid-template-columns: repeat(2, 1fr);
-        max-width: 670px;
-      }
-      
-      div.info{
-        margin: 1.5rem;
-      }
-      section:nth-child(odd) .picture{
-        grid-column: 2;
-        
-      }
+@media only screen and (min-width: 36rem) {
 
-      section:nth-child(odd) .info {
-        grid-column: 1;
-        grid-row: 1;
-      }
-      #weatherArticle {
-        float: left;
-        margin: 1rem;
-      }
+  .navigation {
+    display: flex;
+  }
+
+  .navigation li:first-child {
+    display: none;
+  }
+
+  .navigation li {
+    display: block;
+    flex: 1 1 100%;
+  }
+
+  form legend {
+    text-align: center;
+  }
+
+  /* json side by side format starts here*/
+  .town {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 670px;
+  }
+
+  div.info {
+    margin: 1.5rem;
+  }
+
+  section:nth-child(odd) .picture {
+    grid-column: 2;
+
+  }
+
+  section:nth-child(odd) .info {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  #weatherArticle {
+    float: left;
+    margin: 1rem;
+  }
 }
