finished forcast icon js

--- a/lesson10/wk-10.css/small.css
+++ b/lesson10/wk-10.css/small.css
@@ -193,8 +193,10 @@ margin: 0 2%;
 }
 .forecast img{
     padding-top:16px;
-    width: 50%;
-    border-radius: 100px;
+    width: 83%;
+    
+    background-color:#dee0e2;
+    
 }
 .temp{
     display: block;
