--- a/lesson10/wk-10.css/small.css
+++ b/lesson10/wk-10.css/small.css
@@ -172,35 +172,35 @@ margin: 0 2%;
     display: flex;
     flex-direction: row;
     width: 70%;
-    border-right: 1px solid #333;
+    border: 4px solid #FFDF6E;
+    box-shadow: 0 0 10px rgb(5, 5, 5);
+    border-radius: .5rem;
     margin: 0px auto;
     
 }
 .flex-col{
     flex: 1 1 auto;
     background-color: #FFFFFF;
-    border-bottom: 1px solid #333;
-    border-left: 1px solid #333;
+    
     text-align: center;
 }
 .day{
     display: block; 
-    background-color:#B8D3E9;
-    padding: 5px;
-    border-bottom: 1px solid #333;
-    border-top: 1px solid #333;
+    
+    padding: 1rem 0px 0px ;
+   
     text-align: center;
 }
 .forecast img{
-    padding-top:16px;
-    width: 83%;
-    
-    background-color:#dee0e2;
-    
+    padding: .75rem;
+    margin: .75rem;
+    width: 50%;
+    border-radius: 100px;
+    background-color:#B8D3E9;
 }
 .temp{
     display: block;
-    padding: 0 5px 5px;
+    padding: 0 5px 1rem;
     
 }
 
