--- a/lesson11/main.css/lg.css
+++ b/lesson11/main.css/lg.css
@@ -1,6 +1,19 @@
-@media only screen and (min-width: 65rem) {
+@media only screen and (min-wideth: 64rem) {
     nav ul li a {
         padding: .6rem 1rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    .section4 {
+        line-height: 0px;
+    }
+
+    #map {
+        width: 600px;
+        height: 550px;
     }
 
     /*this is for the form*/
@@ -16,6 +29,7 @@
         margin-left: 12rem;
     }
 
+    /* this is the home page */
     #towns {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -36,7 +50,5 @@
 
         width: 10rem;
         height: 10rem;
-
-
     }
 }
