--- a/lesson11/main.css/smallpartial.css
+++ b/lesson11/main.css/smallpartial.css
@@ -1,7 +1,10 @@
 body {
     font-family: 'Open Sans', sans-serif;
-    
+   
 }
+/* i need body styling for my home page but only for the home page
+ background-color: #B8D3E9;
+    margin: 1rem;*/
 #pancake{
     background-color: #FFDF6E;
     padding: 1.5rem;
@@ -10,9 +13,7 @@ body {
     display: none;
     
 }
-img{
-    padding-right: 16px;
-}
+
 header{
     background-color: #0D3B66;
     color: #FFFFFF;
@@ -21,6 +22,9 @@ header{
     align-items: center;
     justify-content:center;
     
+}
+picture {
+    padding-right: 16px;
 }
 
 .headings{
@@ -101,6 +105,7 @@ main{
 .section1{
     margin: 10px auto;
     position: relative;
+    
 }
 .weatherSum{
     font-size: 14px;
@@ -139,9 +144,8 @@ margin: 0 2%;
 }
 .section2{
     margin: 24px;
-    display: none;   
+    display: none;    
 }
-
 
 .forecast{
     display: flex;
