--- a/lesson8/wk8css/large.css
+++ b/lesson8/wk8css/large.css
@@ -1,5 +1,7 @@
 @media only screen and (min-width: 65rem){
-nav ul li a{padding: .6rem 1rem;} 
+nav ul li a {
+    padding: .6rem 1rem;
+} 
 form label.sbs{
     padding: .4rem 0;
 }
