--- a/lesson11/main.css/lg.css
+++ b/lesson11/main.css/lg.css
@@ -51,5 +51,12 @@
         width: 10rem;
         height: 10rem;
     }
-   
+    #articleimg{
+        max-width: 20%;
+       margin: 1rem 15px 2rem 1rem;
+        }
+        .section3{
+           
+            padding: 1rem;
+        }
 }
