--- a/lesson11/main.css/lg.css
+++ b/lesson11/main.css/lg.css
@@ -45,7 +45,10 @@
     #weatherArticle {
         display: none;
     }
-
+    .articlelist{
+        max-width: 100%;
+        padding-left: 0px;
+      }
     div.picture img {
 
         width: 10rem;
