--- a/lesson11/main.css/med.css
+++ b/lesson11/main.css/med.css
@@ -20,6 +20,11 @@
 .grid{
   grid-template-columns: repeat(2, 1fr);
   }
+  .articlelist{
+    max-width: 50%;
+    padding-left: 20rem;
+  }
+  
   /* json side by side format starts here*/
   .town {
     grid-template-columns: repeat(2, 1fr);
