added tribute to open weather

--- a/lesson11/main.css/small.css
+++ b/lesson11/main.css/small.css
@@ -486,5 +486,10 @@ h3{
     
     footer a {
         color: #FFFFFF;
+        text-decoration: none;
     }
-    
+ .tribute{
+        
+        font-size: 12px;
+        font-style: italic; 
+    }
