--- a/lesson12/main-css/small.css
+++ b/lesson12/main-css/small.css
@@ -128,7 +128,7 @@ nav a:hover {
 
 #sample2 {
     font-size: 1rem;
-    background-color:#84DCC6 ;
+    background-color:#84DCC6;
 }
 
 #sample3 {
@@ -176,4 +176,33 @@ footer {
 
 footer a {
     color: #FFFFFF;
+}
+/* start of site map and wireframes*/
+.smallwireframe{
+    background-color: #84dcc6;
+}
+.smallwireframe img {
+    width: 30%;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+.medwireframe {
+    background-color: #FFDF6E;
+}
+.medwireframe img{
+    width: 50%;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+.largewireframe{
+    background-color: #FFA630; 
+}
+.largewireframe img {
+    width: 60%;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+main a {
+    color:black;
+    text-decoration: none;
 }
