--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -1,46 +1,44 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #B8D3E9;
+    font-family: 'Roboto', sans-serif;
+    background-color:white;
     margin: 1rem;
+   
 }
 
-#pancake {
-    background-color: #FFDF6E;
-    padding: 1.5rem;
-    text-align: center;
-    font-style: italic;
-    display: none;
-
-}
 
 header {
-    background-color:black;
+ 
+    background-color:#5995ed;
     color: #FFFFFF;
     padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   margin-top: 1rem;
 }
+.top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.logo img{
-    max-width: 30%;
+}
+.top img{
+    width: 20%;
     padding-right: 16px;
+    
 }
 
 .headings {
     display: flex;
     flex-direction: column;
 }
-.headings div{
-    margin-left: 16px;
-}
+
+
 h1 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Galada', cursive;
     font-weight: 300;
     font-size: 3rem;
-    margin: auto;
+    margin-left: 1rem;
+    margin-top: 0px;
+    margin-bottom: .2rem;
 }
-
 h2 {
     text-align: center;
     font-weight: 500;
@@ -49,18 +47,21 @@ h2 {
 }
 
 h4 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-weight: 200;
     font-style: italic;
     margin: auto;
 }
 
-/* nav starts here*/
-nav {
-    margin: 0 auto;
-    background-color: #FFDF6E;
-    font-family: 'Open Sans', sans-serif;
+body {
+    background: white;
+    font-family: 'Roboto', sans-serif;
+  }
+  nav {
+    margin: 1rem auto;
+    background-color: #5995ed;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navigation {
@@ -92,386 +93,21 @@ nav ul li a {
     display: block;
     padding: .8rem 2%;
     text-decoration: none;
-    color: #000;
+    color: white;
+    font-family: 'Roboto', sans-serif;
 
 }
 
 nav ul li.active a {
-    background-color: #B8D3E9;
+    background-color:  #FFA630;
 }
 
 nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-/*town cards start here for weather home page*/
-.offer{
-
-  background-color: #FFFFFF; 
-  margin: 1rem auto;
-    
-    color: #000;
-    border-radius: 6px;
-    border: 2px solid #cccccc;
-    padding: .75rem 1.5rem;
-    width: 100%;
-    max-width: 20rem;
-    
-}
-.town {
-    display: grid;
-    grid-gap: 0px;
-    grid-auto-columns: auto;
-    justify-content: center;
-
-    margin: 2rem auto;
-    background-color: #FFFFFF;
-    border-radius: 2rem;
-    box-shadow: -10px 5px 5px gray;
-
-}
-
-
-#weatherArticle {
-    display: block;
-    margin: 0 auto;
-    padding: 1rem;
-    width: 15rem;
-    height: 15rem;
-    border-radius: 50%;
-    background-color: #FFFFFF;
-    box-shadow: -10px 5px 5px gray;
-}
-
-div.picture {
-     margin: 0 auto;
-}
-
-div.picture img {
-    margin: 1rem;
-    padding: 1rem;
-    width: 15rem;
-    height: 15rem;
-    border-radius: 50%;
-    align-content: center;
-
-}
-
-div.info {
-    margin: 2rem;
-}
-
-div.info p {
-    padding: 0px;
-    margin: .5rem;
-}
-
-div.info h4 {
-    margin: 1.5rem;
-}
-
-/*input form starts here*/
-
-form fieldset {
-    margin: 0 auto;
-    border: 4px solid #FFFFFF;
-    border-radius: 10px;
-    padding: .5rem 2%;
-
-}
-
-form legend {
-    color: #000;
-    padding: 0 .8rem;
-    font-size: 1.5rem;
-    border: 5px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: #FFFFFF;
-    text-align: left;
-    margin-top: 2rem;
-}
-
-
-form label.top,
-form div {
-    display: block;
-    padding-top: 1rem;
-    color: #0D3B66;
-    font-size: .8rem;
-}
-
-.top input,
-.top select {
-    -webkit-appearance: none;
-    display: block;
-    font-size: 1rem;
-    padding: .75rem;
-    border-radius: 4px;
-    border: 1px solid;
-    width: 90%;
-    max-width: 20rem;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-form label.sbs {
-    display: block;
-    padding: .50rem 0;
-
-}
-
-#ratingvalue {
-    padding: 1rem 0px;
-    font-size: 1.25rem;
-}
-
-.flexly {
-
-    display: flex;
-    flex-direction: column;
-    max-width: 20rem;
-    color: #0D3B66;
-    font-size: .8rem;
-}
-
-input.submitBtn {
-    margin: 1rem 0 1rem 1rem;
-    background-color: #FFDF6E;
-    color: #000;
-    border-radius: 6px;
-    border: 2px solid #cccccc;
-    padding: .75rem 1.5rem;
-    width: 100%;
-    max-width: 20rem;
-    box-shadow: 1px 1px 1px;
-}
-
-textarea {
-    box-shadow: 1px 1px 1px;
-    width: 96%;
-}
-
-.top input:required {
-    border-left: red solid 6px;
-}
-
-.top input:required:valid {
-    border-left: green solid 6px;
-}
-
-/*this is for the Thank you page*/
-main h1,
-main p {
-    padding: 1rem;
-    text-align: center;
-}
-
-/*this is for the Preston, Fish Haven, Soda Springs page */
-
-main.preston {
-    max-width: 100%;
-    display: block;
-    padding: 8px;
-    margin: 8px auto;
-    background-color: #FFFFFF;
-}
-.section1 {
-    margin: 10px auto;
-    position: relative;
-    
-}
-#boxtitle{
-    line-height: 1rem;
-}
-.weatherSum {
-    font-size: 12px;
-    line-height: 0.3rem;
-    background-color: #0D3B66;
-    border: 2px solid  #FFFFFF;
-    border-radius: .5rem;
-    position: absolute;
-    top: -21px;
-    left: 78px;
-    opacity: .85;
-    box-shadow: 0 0 30px rgb(5, 5, 5);
-    margin: 10px;
-    padding: 0px;
-    
-}
-picture.photoA{
-display: block;
-width: 96%;
-margin: 0 2%;
-}
-#heroimg{
-    width: 100%;
-    /*  this is from the tutorial max-width: 100%;
-    width: 960px;
-    height: 350px;*/
-    padding: 0;
-}
-#boxtitle{
-    background-color: #FFFFFF;
-    padding: .5rem 1.5rem .5rem;
-}
-.contentbox{
-    padding: .4rem;
-    margin: 4px;
-    background-color:#0D3B66;
-    color: #FFFFFF;
-}
-#event-info{
-    background-color: #B8D3E9;
-    margin: 1rem auto;
-    padding: .5rem;
-    width: 60%;
-    border-radius: .5rem;
-    border: .1rem solid #ccc;
-}
-#event-info h2 {
-    background-color:#0D3B66;
-    border-radius: .5rem;
-    color: white;
-}
-.section2{
-    margin: 24px;
-    display: none;    
-}
-
-.forecast{
-    display: flex;
-    flex-direction: row;
-    width: 70%;
-    border: 4px solid #FFDF6E;
-    box-shadow: 0 0 10px rgb(5, 5, 5);
-    border-radius: .5rem;
-    margin: 0px auto;
-    
-}
-.flex-col{
-    flex: 1 1 auto;
-    background-color: #FFFFFF;
-    
-    text-align: center;
-}
-.day{
-    display: block; 
-    
-    padding: 1rem 0px 0px ;
-   
-    text-align: center;
-}
-.forecast img{
-    padding: .75rem;
-    margin: .75rem;
-    width: 50%;
-    border-radius: 100px;
-    background-color:#B8D3E9;
-    
-}
-.temp{
-    display: block;
-    padding: 0 5px 1rem;
-    
-}
-
-/* this is the article on the homepage*/
-.section3{
-    background-color:  #B8D3E9;
-    padding: 16px;
-}
-.section3 h4 {
-    margin-bottom: 1rem;
-}
-.section3 p{
-    text-align: left;
-}
-.readLink {
-    margin: 1rem auto;
-    background-color: #FFDF6E;
-    color: #000;
-    border-radius: 6px;
-    border: 2px solid #cccccc;
-    padding: .75rem 1.5rem;
-    width: 100%;
-    max-width: 8rem;
-    box-shadow: 1px 1px 1px;
-}
-.readLink a {
-    text-decoration: none;
-    color: black;
-}
-#articleimg{
-    float: right;
-    max-width: 70%;
-    margin-right: 15px;
-    border-radius: 8px;
-    margin: 1rem;
-    
-    box-shadow: 0 0 2px rgb(5, 5, 5);
-    
-}
-/*gallery place holder and picture blur start here*/
-img[data-src] {
-    filter: blur(0.2em);
-  }
   
-img{
-    filter: blur(0em);
-    transition: filter 0.5s;
-    width: 100%;
-    height: auto;
-    margin: 0;
-  }
-main.gallery{
-    margin: 0px auto;
-    background-color: #B8D3E9;
-}
-figure{
-    background-color: white;
-    border-radius: 20px;
-    border: .5rem solid white;
-    align-content: center;
-    box-shadow: -10px 5px 5px gray;
-    
 
-}
-figcaption{
-    display: none;
-    text-align: center;
-}
-
-.grid{
-    display: grid;
-    grid-gap: 0px;
-    grid-auto-columns: auto;
-     justify-content: center;
-     max-width: 1050px;
-     margin: 1rem auto;
-}
-
-/* this is the Contact info*/
-.section4{
-    display: flex;
-    flex-direction: row;
-    margin: 16px;
-}
-
-.contact{
-    grid-column: 1/3;
-    margin:  10px auto;
-}
-#map{
-    display: none;
-    
-}
-h3{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    font-size: 2rem;
-}
-
-.socialmedia {
-    width: 40px; }
     
     /*this is footer*/
     footer{
@@ -480,7 +116,7 @@ h3{
         margin: 8px auto;
         text-align: center;
         max-width: 100%;
-        background-color: #0D3B66;
+        background-color: #5995ed;
         color: #FFFFFF;
         
     }
@@ -489,8 +125,4 @@ h3{
         color: #FFFFFF;
         text-decoration: none;
     }
- .tribute{
-        
-        font-size: 12px;
-        font-style: italic; 
-    }
+ 
