--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -1,28 +1,30 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color:white;
+    background-color: white;
     margin: 1rem;
-   
+
 }
 
 
 header {
- 
-    background-color:#5995ed;
+
+    background-color: #5995ed;
     color: #FFFFFF;
     padding: 10px;
-   margin-top: 1rem;
+    margin-top: 1rem;
 }
-.top{
+
+.top {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
-.top img{
+
+.top img {
     width: 20%;
     padding-right: 16px;
-    
+
 }
 
 .headings {
@@ -39,6 +41,7 @@ h1 {
     margin-top: 0px;
     margin-bottom: .2rem;
 }
+
 h2 {
     text-align: center;
     font-weight: 500;
@@ -57,8 +60,9 @@ h4 {
 body {
     background: white;
     font-family: 'Roboto', sans-serif;
-  }
-  nav {
+}
+
+nav {
     margin: 1rem auto;
     background-color: #5995ed;
     font-family: 'Roboto', sans-serif;
@@ -99,30 +103,173 @@ nav ul li a {
 }
 
 nav ul li.active a {
-    background-color:  #FFA630;
+    background-color: #FFA630;
 }
 
 nav a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-  
+/*nave stops here*/
+/* index.html page specifics start here*/
+.section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #84DCC6;
 
+}
+
+.section1 img {
+    width: 100%;
+    border-radius: 1rem 1rem 0 0;
+}
+
+.rentalSum {
+    max-width: 100%;
+    margin: 1.5rem;
+    border: solid 8px white;
+    box-shadow: 0 0 30px rgb(5, 5, 5);
+    border-radius: 1rem;
+}
+
+.rentalSum ul {
+    list-style-type: none;
+
+}
+
+.rentalSum h2 {
+    font-family: 'Galada', cursive;
+    font-weight: 300;
+    font-size: 2rem;
+    margin: 0px;
+    padding: .5rem 0px 0px 0px;
+    color: white;
+}
+
+.section2 {
+    max-width: 90%;
+    margin: 1.5rem;
+
+    padding: 1rem;
+    color: rgb(54, 54, 54);
+}
+
+#high {
+    font-size: 4rem;
+    color: white;
+    text-align: right;
+}
+
+.forecast {
+    display: flex;
+    max-width: 100%;
+
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    padding-right: .5rem;
+    margin: 1rem;
+    border-right: solid slategrey 1px;
+
+}
+
+/*this is rentals grid*/
+img[data-src] {
+    filter: blur(0.2em);
+}
+
+img {
+    filter: blur(0em);
+    transition: filter 0.5s;
+    width: 100%;
+    height: auto;
+    margin: 0;
+}
+
+main.gallery {
+    margin: 0px auto;
     
-    /*this is footer*/
-    footer{
-        display: block;
-        padding: 8px;
-        margin: 8px auto;
-        text-align: center;
-        max-width: 100%;
-        background-color: #5995ed;
-        color: #FFFFFF;
-        
-    }
+}
+
+figure {
+    width: 80%;
+    align-content: center;
     
-    footer a {
-        color: #FFFFFF;
-        text-decoration: none;
-    }
- 
+}
+
+figcaption {
+     display: block;
+    text-align: center;
+    padding: .5rem;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+.grid {
+    display: grid;
+    grid-gap: 0px;
+    grid-auto-columns: auto;
+    justify-content: center;
+    max-width: 100%;
+    margin: 1rem auto;
+    background-color: #84DCC6;
+    padding: 1rem;
+}
+
+/* contact and map location */
+.section3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 900px;
+    margin: 0 auto;
+    background-color: #FFDF6E;
+    
+}
+
+.contact {
+    padding: 1rem;
+    margin: 1rem;
+    width: 300px;
+
+}
+
+.map {
+
+    margin: 1rem;
+}
+
+iframe {
+    border-radius: 1rem;
+    margin: 1rem;
+}
+
+.social-media img {
+
+    justify-content: space-between;
+    width: 40px;
+    padding: 1rem;
+    margin-left: 1rem;
+
+
+}
+
+/*this is footer*/
+footer {
+    display: block;
+    padding: 8px;
+    margin: 8px auto;
+    text-align: center;
+    max-width: 100%;
+    background-color: #5995ed;
+    color: #FFFFFF;
+
+}
+
+footer a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
