--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -18,14 +18,14 @@ header {
     margin-top: 1rem;
 }
 
-.top {
+.icon {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
 
-.top img {
+.icon img {
     width: 20%;
     padding-right: 16px;
 
@@ -49,7 +49,7 @@ h1 {
 h2 {
     text-align: center;
     font-weight: 500;
-    margin: auto;
+    margin: .5rem;
     padding: 1rem;
 }
 
@@ -60,7 +60,14 @@ h4 {
     font-style: italic;
     margin: auto;
 }
+h3 {
+    margin: 1rem;
+    padding-left: 1.5rem;
+}
+ul, li {
+    list-style-type: none;
 
+}
 nav {
     margin: 1rem auto;
     background-color: #5995ed;
@@ -127,22 +134,23 @@ nav a:hover {
 .rentalSum {
     max-width: 100%;
     margin: 1.5rem;
-    border: solid 8px white;
+   
     box-shadow: 0 0 30px rgb(5, 5, 5);
-    border-radius: .5rem;
+    border-radius: .2rem;
+    padding: 1rem;
 }
-
 .rentalSum ul {
-    list-style-type: none;
-
+    margin: 1rem;
+    padding:  0px;
 }
+
 
 .rentalSum h2 {
     font-family: 'Galada', cursive;
     font-weight: 300;
     font-size: 2rem;
     margin: 0px;
-    padding: .5rem 0px 0px 0px;
+   
     color: white;
 }
 
@@ -153,19 +161,32 @@ nav a:hover {
     padding: 1rem;
     color: rgb(54, 54, 54);
 }
-
+.section2 h3{
+    text-align: center;
+    margin-top: 2rem;
+   }
+.section2 h2 {
+    box-shadow: 0 0 30px rgb(5, 5, 5);
+    margin-bottom: 2rem;
+    background-color:#FFA630 ;
+}
 #high {
     font-size: 4rem;
     color: white;
     text-align: right;
+
 }
 
 .forecast {
     display: flex;
-    max-width: 100%;
+    width: 100%;
+    margin: 1rem;
+    padding: 1rem;
 
 }
-
+.contentbox {
+    margin-left: 1rem;
+}
 .flex-col {
     display: flex;
     flex-direction: column;
@@ -293,7 +314,8 @@ tfoot tr td {
     max-width: 900px;
     margin: 0 auto;
     background-color: #FFDF6E;
-    
+    padding: 2rem 2rem 1rem 1rem;
+   
 }
 
 .contact {
@@ -305,7 +327,7 @@ tfoot tr td {
 
 .map {
 
-    margin: 1rem;
+    margin: .2rem;
 }
 
 iframe {
@@ -323,11 +345,16 @@ iframe {
 
 }
 /* the form starts here*/
+.agreement {
+    background-color: #84DCC6;
+    padding-bottom: 1rem;
+}
 form fieldset {
     margin: 0 auto;
-    border: 4px solid #FFFFFF;
-    border-radius: 10px;
+    border: 1px solid #FFFFFF;
+    background-color:#FFDF6E ;
     padding: .5rem 2%;
+   
 
 }
 
@@ -346,17 +373,20 @@ form legend {
 form label.top,
 form div {
     display: block;
-    padding-top: 1rem;
+    padding-top: .5rem;
     color: #0D3B66;
     font-size: .8rem;
 }
-
-.top input,
-.top select {
+input {
+    margin: .5rem;
+}
+ .top input,
+ .top select {
     -webkit-appearance: none;
     display: block;
     font-size: 1rem;
     padding: .75rem;
+    margin-bottom: 1rem;
     border-radius: 4px;
     border: 1px solid;
     width: 90%;
@@ -386,9 +416,9 @@ form label.sbs {
 
 input.submitBtn {
     margin: 1rem 0 1rem 1rem;
-    background-color: #FFDF6E;
+    background-color: #FFA630;
     color: #000;
-    border-radius: 6px;
+    
     border: 2px solid #cccccc;
     padding: .75rem 1.5rem;
     width: 100%;
@@ -408,6 +438,15 @@ textarea {
 .top input:required:valid {
     border-left: green solid 6px;
 }
+/* confirmation page*/
+.confirmation{
+    background-color:#84DCC6 ;
+}
+.confirmation  p {
+    padding: 1rem;
+    text-align: center;
+}
+
 /*this is footer*/
 footer {
     display: block;
