--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -1,11 +1,8 @@
 body {
-   
-   
     font-family: 'Roboto', sans-serif;
     background-color: white;
     margin: 0 auto;
     background: white;
-    font-family: 'Roboto', sans-serif;
     width: 100%;
 }
 
@@ -60,18 +57,23 @@ h4 {
     font-style: italic;
     margin: auto;
 }
+
 h3 {
     margin: 1rem;
     padding-left: 1.5rem;
 }
-ul, li {
+
+ul,
+li {
     list-style-type: none;
 
 }
+
 nav {
     margin: .25rem auto;
     background-color: #5995ed;
     font-family: 'Roboto', sans-serif;
+
 }
 
 .navigation {
@@ -108,11 +110,11 @@ nav ul li a {
 
 }
 
-nav ul li.active a {
+nav ul li a.active {
     background-color: #FFA630;
 }
 
-nav a:hover {
+nav ul li a:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -134,14 +136,15 @@ nav a:hover {
 .rentalSum {
     max-width: 100%;
     margin: 1.5rem;
-   
+
     box-shadow: 0 0 30px rgb(5, 5, 5);
     border-radius: .2rem;
     padding: 1rem;
 }
+
 .rentalSum ul {
     margin: 1rem;
-    padding:  0px;
+    padding: 0px;
 }
 
 
@@ -150,7 +153,7 @@ nav a:hover {
     font-weight: 300;
     font-size: 2rem;
     margin: 0px;
-   
+
     color: white;
 }
 
@@ -161,15 +164,18 @@ nav a:hover {
     padding: 1rem;
     color: rgb(54, 54, 54);
 }
-.section2 h3{
+
+.section2 h3 {
     text-align: center;
     margin-top: 2rem;
-   }
+}
+
 .section2 h2 {
     box-shadow: 0 0 30px rgb(5, 5, 5);
     margin-bottom: 2rem;
-    background-color:#FFA630 ;
+    background-color: #FFA630;
 }
+
 #high {
     font-size: 4rem;
     color: white;
@@ -184,9 +190,11 @@ nav a:hover {
     padding: 1rem;
 
 }
+
 .contentbox {
     margin-left: 1rem;
 }
+
 .flex-col {
     display: flex;
     flex-direction: column;
@@ -195,9 +203,15 @@ nav a:hover {
     border-right: solid slategrey 1px;
 
 }
+
 .flex-col img {
-width: 40px;
+    width: 40px;
 }
+
+#yellow {
+    background-color: #FFDF6E;
+}
+
 /*this is rentals pic grid*/
 img[data-src] {
     filter: blur(0.2em);
@@ -209,22 +223,22 @@ img {
     width: 100%;
     height: auto;
     margin: 0;
-    
+
 }
 
 main.gallery {
     margin: 0px auto;
-    
+
 }
 
 figure {
     width: 80%;
     align-content: center;
-    
+
 }
 
 figcaption {
-     display: block;
+    display: block;
     text-align: center;
     padding: .5rem;
     font-family: 'Roboto', sans-serif;
@@ -241,6 +255,7 @@ figcaption {
     background-color: #84DCC6;
     padding: 1rem;
 }
+
 /* rental table starts here */
 .rental-table {
     background-color: #FFDF6E;
@@ -248,62 +263,64 @@ figcaption {
     width: 100%;
 
 }
+
 #flat-table {
-   width: 100%; 
+    width: 100%;
 }
 
 table,
 th,
 td {
-  border: 1px solid rgb(78, 76, 76);
-  border-collapse: collapse; 
+    border: 1px solid rgb(78, 76, 76);
+    border-collapse: collapse;
 }
 
 table {
-  font-size: 100%;
-  overflow: auto;
-  width: 80%;
-  box-shadow: 10px 10px 10px #c4ad5d;
-  text-align: center;
-  margin: 0 auto;
+    font-size: 100%;
+    overflow: auto;
+    width: 80%;
+    box-shadow: 10px 10px 10px #c4ad5d;
+    text-align: center;
+    margin: 0 auto;
 
 }
+
 b:only-child {
-  color: rgb(78, 76, 76);
+    color: rgb(78, 76, 76);
 }
 
 tr:nth-child(odd) {
-  background-color: rgb(233, 233, 233);
-  color: #000000
+    background-color: rgb(233, 233, 233);
+    color: #000000
 }
 
 tr:nth-child(even) {
-  background-color: white;
+    background-color: white;
 }
 
 th,
 tfoot tr td {
-  background-color: #c6daf8;
-  color: rgb(78, 76, 76);
-  padding: 10px 10px;
-  
+    background-color: #c6daf8;
+    color: rgb(78, 76, 76);
+    padding: 10px 10px;
+
 }
 
 td {
-  padding: 8px 8px;
+    padding: 8px 8px;
 }
 
 th {
-  font-weight: bold;
-  font-size: 1.75rem;
+    font-weight: bold;
+    font-size: 1.75rem;
 }
 
 tfoot tr td {
-  font-size: .8rem;
+    font-size: .8rem;
 }
 
-#active{
-  color: #ffffff;
+#active {
+    color: #ffffff;
 }
 
 /* contact and map location */
@@ -315,7 +332,7 @@ tfoot tr td {
     margin: 0 auto;
     background-color: #FFDF6E;
     padding: 2rem 2rem 1rem 1rem;
-   
+
 }
 
 .contact {
@@ -325,19 +342,14 @@ tfoot tr td {
 
 }
 
-.map {
-width: 250px;
-    margin: .2rem;
-}
 
-iframe {
-    
-    margin: 1rem;
-}
-#social-media{
+
+
+#social-media {
     display: flex;
     justify-content: space-between;
 }
+
 #social-media img {
     display: flex;
     justify-content: space-between;
@@ -347,17 +359,19 @@ iframe {
 
 
 }
+
 /* the form starts here*/
 .agreement {
     background-color: #84DCC6;
     padding-bottom: 1rem;
 }
+
 form fieldset {
     margin: 0 auto;
     border: 1px solid #FFFFFF;
-    background-color:#FFDF6E ;
+    background-color: #FFDF6E;
     padding: .5rem 2%;
-   
+
 
 }
 
@@ -380,11 +394,13 @@ form div {
     color: #0D3B66;
     font-size: .8rem;
 }
+
 input {
     margin: .5rem;
 }
- .top input,
- .top select {
+
+.top input,
+.top select {
     -webkit-appearance: none;
     display: block;
     font-size: 1rem;
@@ -421,7 +437,7 @@ input.submitBtn {
     margin: 1rem 0 1rem 1rem;
     background-color: #FFA630;
     color: #000;
-    
+
     border: 2px solid #cccccc;
     padding: .75rem 1.5rem;
     width: 100%;
@@ -441,56 +457,103 @@ textarea {
 .top input:required:valid {
     border-left: green solid 6px;
 }
+
 /* confirmation page*/
-.confirmation{
-    background-color:#84DCC6 ;
+.confirmation {
+    background-color: #84DCC6;
 }
-.confirmation  p {
+
+.confirmation p {
     padding: 1rem;
     text-align: center;
 }
+
 /*tours page*/
 
- .history {
-     background-color:#FFDF6E;
- }
-.history p, .history h3 {
+.history {
+    background-color: #FFDF6E;
+}
+
+.history p,
+.history h3 {
     padding: .5rem;
     margin-bottom: 1rem;
 }
- .grid section {
+
+.grid section {
     margin: 0.5rem;
     align-items: center;
 }
+
 .grid section img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
+
     width: 250px;
     height: auto;
 }
+
 .grid section p {
     margin: 2rem .5rem .5rem 1rem;
     line-height: 1.2em;
 }
+
 .ruin-img {
-   display: flex;
+    display: flex;
     width: 50%;
 }
+
 .readLink {
     text-align: center;
     margin: .75rem auto;
     border-bottom: 1px solid black;
     color: #000;
-    
-    
+
+
     max-width: 8rem;
-   
+
 }
+
 .readLink a {
     text-decoration: none;
     color: black;
+}
+
+/*Contact Page*/
+
+.address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #84DCC6;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.address section {
+    margin: .5rem;
+}
+
+.address img {
+    width: 90%;
+    padding: 1rem;
+}
+.address p {
+    padding: .5rem;
+  } 
+  iframe {
+max-width: 350px;
+    margin: 1rem;
+}
+.map {
+    text-align: center;
+    background-color:  #FFDF6E;
+
+}
+.locale h2 {
+    margin: 0px;
+    padding: 10px;
 }
 /*this is footer*/
 footer {
